# NorthStateFramework-cpp

./: .gitignore  CMakeLists.txt  HEADER.txt  LICENSE  NorthStateFrameworkInC++.sln  NorthStateFrameworkInC++Development.sln  README.md
Documentation/: Documentation.vcproj  Documentation.vcxproj  index.html
Documentation/Doxygen/: Doxyfile  DoxygenFooter.htm  DoxygenMainPage.txt
Documentation/WorkingWith/: WorkingWithNorthStateFrameworkInC++.doc  WorkingWithNorthStateFrameworkInC++.vsd
Examples/: CMakeLists.txt
Examples/CombatExample/: Combat.cpp  Combat.h  CombatExample.cpp  CombatExample.vcproj  CombatExample.vcxproj  CombatExample.vcxproj.filters  CombatExampleTrace.xml  ReadMe.txt
Examples/CommandProcessorExample/: CommandProcessor.cpp  CommandProcessor.h  CommandProcessorExample.cpp  CommandProcessorExample.vcproj  CommandProcessorExample.vcxproj  CommandProcessorExample.vcxproj.filters  CommandProcessorExampleTrace.xml  CommandProcessorObserver.cpp  CommandProcessorObserver.h  ReadMe.txt
Examples/CommandProcessorWithResetStateMachineExample/: CommandProcessorObserver.cpp  CommandProcessorObserver.h  CommandProcessorWithResetStateMachine.cpp  CommandProcessorWithResetStateMachine.h  CommandProcessorWithResetStateMachineExample.cpp  CommandProcessorWithResetStateMachineExample.vcproj  CommandProcessorWithResetStateMachineExample.vcxproj  CommandProcessorWithResetStateMachineExample.vcxproj.filters  CommandProcessorWithResetStateMachineExampleTrace.xml  ReadMe.txt  ResetStrategy.cpp  ResetStrategy.h
Examples/CommandProcessorWithResetStrategyExample/: CommandProcessor.cpp  CommandProcessor.h  CommandProcessorObserver.cpp  CommandProcessorObserver.h  CommandProcessorWithResetStrategy.cpp  CommandProcessorWithResetStrategy.h  CommandProcessorWithResetStrategyExample.cpp  CommandProcessorWithResetStrategyExample.vcproj  CommandProcessorWithResetStrategyExample.vcxproj  CommandProcessorWithResetStrategyExample.vcxproj.filters  CommandProcessorWithResetStrategyExampleTrace.xml  ReadMe.txt  ResetStrategy.cpp  ResetStrategy.h
Examples/CommandProcessorWithRetryExample/: CommandProcessor.cpp  CommandProcessor.h  CommandProcessorObserver.cpp  CommandProcessorObserver.h  CommandProcessorWithRetry.cpp  CommandProcessorWithRetry.h  CommandProcessorWithRetryExample.cpp  CommandProcessorWithRetryExample.vcproj  CommandProcessorWithRetryExample.vcxproj  CommandProcessorWithRetryExample.vcxproj.filters  CommandProcessorWithRetryExampleTrace.xml  ReadMe.txt
Examples/CycleABExample/: CycleAB.cpp  CycleAB.h  CycleABExample.cpp  CycleABExample.vcproj  CycleABExample.vcxproj  CycleABExample.vcxproj.filters  CycleABExampleTrace.xml  ReadMe.txt
Examples/WorkHardPlayHardExample/: ReadMe.txt  WorkHardPlayHard.cpp  WorkHardPlayHard.h  WorkHardPlayHardExample.cpp  WorkHardPlayHardExample.vcproj  WorkHardPlayHardExample.vcxproj  WorkHardPlayHardExample.vcxproj.filters  WorkHardPlayHardExampleTrace.xml
Framework/: CMakeLists.txt  NSFBooleanGuard.h  NSFChoiceState.cpp  NSFChoiceState.h  NSFCompositeState.cpp  NSFCompositeState.h  NSFCoreTypes.h  NSFCustomConfig.h  NSFDataEvent.h  NSFDebugUtility.cpp  NSFDebugUtility.h  NSFDeepHistory.cpp  NSFDeepHistory.h  NSFDelegateContext.h  NSFDelegates.cpp  NSFDelegates.h  NSFEnvironment.cpp  NSFEnvironment.h  NSFEvent.cpp  NSFEvent.h  NSFEventHandler.cpp  NSFEventHandler.h  NSFEventThread.cpp  NSFEventThread.h  NSFExceptionHandler.cpp  NSFExceptionHandler.h  NSFExternalTransition.cpp  NSFExternalTransition.h  NSFForkJoin.cpp  NSFForkJoin.h  NSFForkJoinTransition.cpp  NSFForkJoinTransition.h  NSFInitialState.cpp  NSFInitialState.h  NSFInternalTransition.cpp  NSFInternalTransition.h  NSFLocalTransition.cpp  NSFLocalTransition.h  NSFOSMutex.cpp  NSFOSMutex.h  (+39 more)
Framework/OSPorts/POSIX/: NSFOSMutex_POSIX.cpp  NSFOSMutex_POSIX.h  NSFOSSignal_POSIX.cpp  NSFOSSignal_POSIX.h  NSFOSThread_POSIX.cpp  NSFOSThread_POSIX.h  NSFOSTimer_POSIX.cpp  NSFOSTimer_POSIX.h
Framework/OSPorts/Win32/: NSFOSMutex_Win32.cpp  NSFOSMutex_Win32.h  NSFOSSignal_Win32.cpp  NSFOSSignal_Win32.h  NSFOSThread_Win32.cpp  NSFOSThread_Win32.h  NSFOSTimer_Win32.cpp  NSFOSTimer_Win32.h
Framework/OSPorts/WinCE/: NSFOSMutex_WinCE.cpp  NSFOSMutex_WinCE.h  NSFOSSignal_WinCE.cpp  NSFOSSignal_WinCE.h  NSFOSThread_WinCE.cpp  NSFOSThread_WinCE.h  NSFOSTimer_WinCE.cpp  NSFOSTimer_WinCE.h
Framework/OSPorts/eCOS/: NSFOSMutex_eCOS.cpp  NSFOSMutex_eCOS.h  NSFOSSignal_eCOS.cpp  NSFOSSignal_eCOS.h  NSFOSThread_eCOS.cpp  NSFOSThread_eCOS.h  NSFOSTimer_eCOS.cpp  NSFOSTimer_eCOS.h
Test/: BasicForkJoinTest.cpp  BasicForkJoinTest.h  BasicStateMachineTest.cpp  BasicStateMachineTest.h  CMakeLists.txt  ChoiceStateTest.cpp  ChoiceStateTest.h  ContextSwitchTest.cpp  ContextSwitchTest.h  ContinuouslyRunningTest.cpp  ContinuouslyRunningTest.h  DeepHistoryReEntryTest.cpp  DeepHistoryReEntryTest.h  DeepHistoryTest.cpp  DeepHistoryTest.h  DocumentLoadTest.cpp  DocumentLoadTest.h  DocumentNavigationTest.cpp  DocumentNavigationTest.h  ExceptionHandlingTest.cpp  ExceptionHandlingTest.h  ExtendedRunTest.cpp  ExtendedRunTest.h  ForkJoinToForkJoinTransitionTest.cpp  ForkJoinToForkJoinTransitionTest.h  FrameworkTest.vcproj  FrameworkTest.vcxproj  FrameworkTest.vcxproj.filters  InvalidTest.xml  MemoryLeakTest.cpp  MemoryLeakTest.h  MultipleStateMachineStressTest.cpp  MultipleStateMachineStressTest.h  MultipleTriggersOnTransitionTest.cpp  MultipleTriggersOnTransitionTest.h  ShallowHistoryTest.cpp  ShallowHistoryTest.h  StateMachineDeleteTest.cpp  StateMachineDeleteTest.h  StateMachineRestartTest.cpp  (+26 more)
Test/Documentation/: BasicForkJoinTest.vsd  BasicStateMachineTest.vsd  ChoiceStateTest.vsd  ContinuouslyRunningTest.vsd  DeepHistoryReEntryTest.vsd  DeepHistoryTest.vsd  ExceptionHandlingTest.vsd  ExtendedRunTest.vsd  ForkJoinToForkJoinTransitionTest.vsd  MultipleTriggersOnTransitionTest.vsd  ShallowHistoryTest.vsd  StateMachineRestartTest.vsd  StrategyTest.vsd  TransitionOrderTest.vsd
_includes/: download.html
